2006-10-15  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpview-popup.c: close the popup when a drag starts.

2006-10-15  Michael Natterer  <mitch@gimp.org>

	Applied slightly modified patch from Martin Nordholts which
	implements more fine-grained steps for actions. Fixes bug #165612.

	* app/actions/actions-types.h: add additional values to
	enum GimpActionSelectType.

	* app/actions/actions.[ch] (action_select_value)
	(action_select_property): handle them here and added "small_inc"
	and "delta_factor" parameters.

	* app/actions/context-actions.c: added small and percent actions
	for the brush radius.

	* app/actions/context-commands.c
	* app/actions/layers-commands.c
	* app/actions/tools-commands.c
	* app/actions/view-commands.c: pass small and percent increase
	values to the action_select_foo() functions.

	* app/actions/context-commands.c (context_brush_radius_cmd_callback):
	make sure we don't end up with 1.1, 2.1 etc brush radius values.

2006-10-14  Michael Natterer  <mitch@gimp.org>

	* plug-ins/rcm/rcm_callback.c: use GDK_INVERT instead of GDK_XOR
	with white foreground color.

2006-10-14  Michael Natterer  <mitch@gimp.org>

	* plug-ins/imagemap/imap_cmd_move.c
	* plug-ins/imagemap/imap_cmd_move_sash.c
	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_object.c: use GDK_XOR instead of
	GDK_EQUIV. Fixes bug #311621.

2006-10-14  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/convert-dialog.c
	* app/dialogs/desaturate-dialog.c
	* app/dialogs/grid-dialog.c
	* app/dialogs/image-properties-dialog.c
	* app/dialogs/layer-add-mask-dialog.c
	* app/dialogs/layer-options-dialog.c
	* app/dialogs/print-size-dialog.c
	* app/dialogs/resize-dialog.c
	* app/dialogs/scale-dialog.c
	* app/dialogs/vectors-options-dialog.c: don't allow "context" to
	be NULL in any dialog constructor.

2006-10-14  Michael Natterer  <mitch@gimp.org>

	Remember the settings in the scale and resize dialogs for images